<resources>
    <string name="app_name">Бросить пить</string>
    <string name="main_question">Хочешь\nбросить\nпить?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="no_text">Нет?\nТогда просто удали это приложение и продолжай травить себя дальше…</string>
    <string name="yes_text">Отлично!\n\n
        Первый шаг к цели сделан.\n
        Что дальше?\n
        Просто читай все уведомления от приложения. Подсознание сделает всю остальную работу.</string>
    <string name="how_it_works">Как это работает?</string>
    <string name="close">Закрыть</string>
    <string name="share">Поделиться</string>
    <string name="header_text">Бросить пить</string>
    <string name="how_it_works_description">Большинство решений человек принимает подсознательно, исходя из собственного жизненного опыта и
        имеющихся знаний, с учётом контекста текущих событий. Порой, даже зная о вреде чего-либо, человек по воле
        случая или обстоятельств забывает об этом. И действует не в соответствии со своими долгосрочными желаниями,
        а по воле мимолётного порыва.\n\n
        Данное приложение решает сразу две задачи.\n
        Во-первых, человек постепенно узнаёт и наполняет своё подсознание информацией, необходимой для отказа от вредной привычки.\n
        Во-вторых, регулярные уведомления создают информационный контекст, находясь в рамках которого подсознание
        с большей вероятностью будет выдавать решения в пользу отказа от вредной привычки.\n\n
        Не нужно ожидать мгновенного эффекта. Но с каждым днём, неделей и месяцем, желание потакать вредной привычке будет пропадать.
        Просто читай все уведомления.
</string>
</resources>