<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.HowItWorksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/GeneralText"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works"
            android:textStyle="bold" />

        <TextView
            style="@style/GeneralText"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/close_button"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:text="@string/close"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary" />

    </LinearLayout>

</ScrollView>