<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/question_tv"
        style="@style/GeneralText"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/main_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/yes_button"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/no_button"
            style="@style/Buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>